2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] : makes correct code to remove conflicts 
        between standard library (std) and vtk library (problems are found
        under Windows... thanks Windows !)

2003-05-30  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] should now be volume aware (read ready for
        debug stage).
      * gdcmPython/demo/vtkGdcmReader.py: commented lines for volume test

2003-05-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * vtk/vtkGdcmReader[cxx|h] preparation addons for loading volumes.

2003-05-28  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * When compiling with distutils (see setup.py) the C++ compiler is
        called with different flags than the default ones (with automake).
        In order to fix all those warning, I compiled gdcm with the command
           make 'CXXFLAGS=-Wall -Wstrict-prototypes -D__STDC_LIMIT_MACROS'
        and went for warning fixes:
        - src/gdcmHeader.cxx, Test/dcm2acr.cxx, pourFindTaggs.cxx cleaned
          up from unused variables.
        - vtk/vtkGdcmReader.cxx: potential bug fix.
      * src/gdcmHeader.h: Doxygen warning cleanup

2003-05-27  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
      * gdcmPython/gdcm.i:
        - typemaps correction to take into account the systematic replacement
          of "using namespace std" with std:: prefix e.g. std::list,
          std::string... (cf changes of 2003-05-21).
        - gdcmGlob global variable of type gdcmGlobal (defined in
          src/gdcmUtil.cxx and declared in gdcmPython/gdcm.i) is now
          exported to Python a as cvar.
      * gdcmPython/__init__.py now defines two functions GetPubDictTagNames()
        and GetPubDictTagNamesByCategory() as a replacement for deprecated
        gdcmDictSet.GetPubDictTagNames() and
        gdcmDictSet.GetPubDictTagNamesByCategory() class functions (i.e.
        C++ static methods).