@@ -1,3 +1,6 @@
+2003-06-03  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
+      * vtk/vtkGdcmReader.cxx: hopefully corrected Z extent.
+
 2003-06-02  Benoit Regrain <Benoit.Regrain@creatis.insa-lyon.fr>
       * vtk/vtkGdcmReader[cxx|h] : makes correct code to remove conflicts 
         between standard library (std) and vtk library (problems are found
